# DesignPattern-2021

./: .gitignore  AcVisitor.cpp  AcVisitor.h  ActivitySystem.cpp  ActivitySystem.h  AdVisitor.cpp  AdVisitor.h  AdvertisingSystem.cpp  AdvertisingSystem.h  Application.cpp  CMakeLists.txt  Commodity.cpp  Commodity.h  DP_AnA.cpp  Facade.cpp  Facade.h  Interpreter.cpp  Interpreter.h  README.md  UserInterface.cpp  UserInterface.h  commodity_seller.cpp  commodity_seller.h  order.cpp  order.h  order_seller.cpp  order_seller.h  seller.cpp  seller.h  shop.cpp  shop.h  shopInterface.cpp  shopInterface.h  shop_seller.cpp  shop_seller.h  数据预处理清单.md  软件设计模式项目文档.md
AC_ADSystem/: AcVisitor.cpp  AcVisitor.h  ActivitySystem.cpp  ActivitySystem.h  AdVisitor.cpp  AdVisitor.h  AdvertisingSystem.cpp  AdvertisingSystem.h  Facade.cpp  Facade.h  Interpreter.cpp  Interpreter.h
Basic/: welcome.cpp  welcome.h
Cart/: Cart.cpp  Cart.h  CartCommand.cpp  CartCommand.h  CartInterface.cpp  CartInterface.h  SelectedCommodity.cpp  SelectedCommodity.h
ChainOfResponsibility/: ChainOfResponsibility.cpp  ChainOfResponsibility.h
Commodity/: Commodity.cpp  Commodity.h  CommodityFactory.cpp  CommodityFactory.h  CommodityInterface.cpp  CommodityInterface.h
Customer/: ChatRoom.cpp  ChatRoom.h  Customer.cpp  Customer.h  CustomerMain.cpp  CustomerMain.h  Customers.cpp  Customers.h  Information.cpp  Information.h  UserInterface.cpp  UserInterface.h
Order/: OrderInterface.cpp  OrderInterface.h  order.cpp  order.h
Seller/: SellerCommodityInterface.cpp  SellerCommodityInterface.h  SellerOrderInterface.cpp  SellerOrderInterface.h  seller.h
Shop/: shop.cpp  shop.h  shopFilter.cpp  shopFilter.h  shopInterface.cpp  shopInterface.h
Welcome/: welcome.cpp  welcome.h
doc/: 设计模式答辩（终）.pptx  软件设计模式项目文档.docx
